--- a/Budgeting.ipynb
+++ b/Budgeting.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Formulación del Problema de Optimzación\n",
+    "### Formulación del Problema de Optimización\n",
     "\n",
     "##### Conjuntos y Notaciones:\n",
     "- Sea $n$ el número de proyectos a evaluar\n",
