--- a/Investments Pantaleon.ipynb
+++ b/Investments Pantaleon.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Selección de Ejecución de Inversiones Pantaleón\n",
     "\n",
-    "Pantaleón está considerando seis posibles proyectos de construcción durante los próximos 4 años. Fox puede emprender cualquiera de los proyectos en parte o en su totalidad. La ejecución parcial de un proyecto prorrateará proporcionalmente tanto el rendimiento como los desembolsos de efectivo. Los rendimientos (valor presente) y los desembolsos de efectivo para los proyectos se dan en la siguiente tabla.\n",
+    "Pantaleón está considerando seis posibles proyectos de inversión durante los próximos 4 años. Pantaleón puede emprender cualquiera de los proyectos en parte o en su totalidad. La ejecución parcial de un proyecto prorrateará proporcionalmente tanto el rendimiento como los desembolsos de efectivo. Los rendimientos (valor presente) y los desembolsos de efectivo para los proyectos se dan en la siguiente tabla.\n",
     "\n",
     "\n",
     "| Proyecto | Desembolso Año 1 ($1000) | Desembolso Año 2  ($1000) | Desembolso Año 3  ($1000) | Desembolso Año 4 ($1000)| Rendimiento ($1000) |\n",
